@@ -19,6 +19,9 @@ Version 0.7.2 UNRELEASED
 
   * [cmdline] Warn when package cannot be marked/unmarked auto (Closes: #498240)
 
+  * Install signal handlers and do clean-up when terminating abruptly
+    (Closes: #558352)
+
 - User visible changes:
 
   * Change error string of source_policy_parser to be the same as the rest
